--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <html>
 <head>
  <script>
-  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="piBW3VVcWasN3Mz0o3LSKoSiXoKzGGMT";analytics.SNIPPET_VERSION="4.15.2";
-  analytics.load("piBW3VVcWasN3Mz0o3LSKoSiXoKzGGMT");
+  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics._writeKey="gsvIJcNHAvmLNLwFUeiU4opPL86rLBnN";analytics.SNIPPET_VERSION="4.15.2";
+  analytics.load("gsvIJcNHAvmLNLwFUeiU4opPL86rLBnN");
   analytics.page();
   }}();
 </script>
@@ -46,17 +46,17 @@ Email: <input name="email" required="" size="60" type="email"/>
      name: fullname
    };
  // Identify call
-     analytics.identify('12345', {
+     analytics.identify(email, {
        email: email,
        name: fullname,
        shoeType: shoeType
      });
   //  Sign-up Track call
-     analytics.track('user signed up', user, function() {
+/*     analytics.track('user signed up', user, function() {
        window.location.href = "";
-     });
+     });*/
  // Ecommerce Events
-    analytics.track('Products Searched', {
+/*    analytics.track('Products Searched', {
      query: 'kith air force 1'
     });
  
@@ -139,7 +139,7 @@ Email: <input name="email" required="" size="60" type="email"/>
           image_url: 'https:///www.example.com/product/path.jpg'
         }
       ]
-    });
+    });*/
  }
  
 </script>
