--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@ Email: <input name="email" required="" size="60" type="email"/>
        shoeType: shoeType
      });
   //  Sign-up Track call
-/*     analytics.track('user signed up', user, function() {
+     analytics.track('User Signed Up', user, function() {
        window.location.href = "";
-     });*/
+     });
  // Ecommerce Events
 /*    analytics.track('Products Searched', {
      query: 'kith air force 1'
